mock students + pagination for students view

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -4,28 +4,36 @@
         <i class="fa-solid fa-xmark" (click)="closeMenu()"></i>
     </div>
 
-    <div class='menu-item flex items-center gap-5' (click)="selectMenu('Dashboard')">
-        <div class="w-auto flex justify-center items-center h-auto">
-            <i class='fa-solid fa-table-columns w-4 text-xl'></i>
+    <a routerLink="/" (click)="selectMenu('Dashboard')">
+        <div class='menu-item flex items-center gap-5'>
+            <div class="w-auto flex justify-center items-center h-auto">
+                <i class='fa-solid fa-table-columns w-4 text-xl'></i>
+            </div>
+            Dashboard
         </div>
-        Dashboard
-    </div>
-    <div class='menu-item flex items-center gap-5' (click)="selectMenu('Students')">
-        <div class="w-auto flex justify-center items-center h-auto">
-            <i class="fa-solid fa-user-graduate w-4 text-xl"></i>
+    </a>
+    <a routerLink="/students" (click)="selectMenu('Students')">
+        <div class='menu-item flex items-center gap-5'>
+            <div class="w-auto flex justify-center items-center h-auto">
+                <i class="fa-solid fa-user-graduate w-4 text-xl"></i>
+            </div>
+            Students
         </div>
-        Students
-    </div>
-    <div class='menu-item flex items-center gap-5' (click)="selectMenu('Parents')">
-        <div class="w-auto flex justify-center items-center h-auto">
-            <i class="fa-solid fa-person-breastfeeding w-4 text-xl"></i>
+    </a>
+    <a routerLink="/parents" (click)="selectMenu('Parents')">
+        <div class='menu-item flex items-center gap-5'>
+            <div class="w-auto flex justify-center items-center h-auto">
+                <i class="fa-solid fa-person-breastfeeding w-4 text-xl"></i>
+            </div>
+            Parents
         </div>
-        Parents
-    </div>
-    <div class='menu-item flex items-center gap-5' (click)="selectMenu('Teachers')">
-        <div class="w-auto flex justify-center items-center h-auto">
-            <i class="fa-solid fa-chalkboard-user w-4 text-xl"></i>
+    </a>
+    <a routerLink="/teachers" (click)="selectMenu('Teachers')">
+        <div class='menu-item flex items-center gap-5'>
+            <div class="w-auto flex justify-center items-center h-auto">
+                <i class="fa-solid fa-chalkboard-user w-4 text-xl"></i>
+            </div>
+            Teachers
         </div>
-        Teachers
-    </div>
+    </a>
 </div>
