--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <sman-header></sman-header>
-<h1 class="text-blue-700">SchoolManagement</h1>
-<sman-students></sman-students>
+<router-outlet></router-outlet>
+<sman-footer></sman-footer>
