--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container px-4">
+<div class="container px-4 sm:px-0 pb-4 bg-white">
     <div class="flex justify-between items-center py-6">
         <i class="fa-solid fa-bars text-xl" (click)="showMenu()"></i>
         <h3 class="text-xl font-medium">{{selectedMenu}}</h3>
@@ -6,7 +6,7 @@
     </div>
     <div class="relative">
         <i class="fa-solid fa-magnifying-glass absolute top-1/2 -translate-y-1/2 ml-4"></i>
-        <input class="placeholder:text-sm placeholder:pl-11 w-full bg-slate-100 rounded-full py-2" type="text"
+        <input class="placeholder:text-sm placeholder:pl-11 w-full bg-background rounded-full py-2" type="text"
             placeholder="Search for something">
     </div>
     @if (displayMenu) {
