authentication implemented (interceptor, login, logout, user profile page)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,9 @@ body {
     -webkit-font-smoothing: antialiased;
     font-family: 'Inter', sans-serif;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button {
+
+}
