--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<sman-loading-spinner></sman-loading-spinner>
+@if(authState && authState !== undefined) {
 <sman-header></sman-header>
 <router-outlet></router-outlet>
-<sman-footer></sman-footer>
+} @else {
+<sman-login></sman-login>
+}
