--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,41 +1,28 @@
-<div class="flex flex-col gap-5 w-1/3 absolute top-0 left-0 p-4 bg-white shadow-md rounded-lg" id="sidebar">
-    <div class="flex justify-between items-center mb-4">
-        <img class="w-10 h-10 relative top-1" src=".\assets\images\Logo.png" alt="Logo">
-        <i class="fa-solid fa-xmark cursor-pointer" (click)="closeMenu()"></i>
+<div class="flex flex-col w-64 h-full shadow-md rounded-lg" id="sidebar">
+    <div class="flex justify-between bg-bgheader px-4 h-20 items-center">
+        <img class="w-10 h-10" src=".\assets\images\logo (2).png" alt="Logo">
+        <i class="fa-solid fa-bars cursor-pointer text-white text-xl"></i>
     </div>
-
-    <a routerLink="/" (click)="selectMenu('Dashboard')">
-        <div class='menu-item flex items-center gap-5'>
-            <div class="w-auto flex justify-center items-center h-auto">
-                <i class='fa-solid fa-table-columns w-4 text-xl'></i>
-            </div>
-            Dashboard
-        </div>
-    </a>
-    <a routerLink="/students" (click)="selectMenu('Students')">
-        <div class='menu-item flex items-center gap-5'>
-            <div class="w-auto flex justify-center items-center h-auto">
-                <i class="fa-solid fa-user-graduate w-4 text-xl"></i>
-            </div>
-            Students
-        </div>
-    </a>
-    <a routerLink="/parents" (click)="selectMenu('Parents')">
-        <div class='menu-item flex items-center gap-5'>
-            <div class="w-auto flex justify-center items-center h-auto">
-                <i class="fa-solid fa-person-breastfeeding w-4 text-xl"></i>
-            </div>
-            Parents
-        </div>
-    </a>
-    <a routerLink="/teachers" (click)="selectMenu('Teachers')">
-        <div class='menu-item flex items-center gap-5'>
-            <div class="w-auto flex justify-center items-center h-auto">
-                <i class="fa-solid fa-chalkboard-user w-4 text-xl"></i>
-            </div>
-            Teachers
-        </div>
-    </a>
-    <button class="w-full py-[10px] px-8 bg-primary-300 text-white rounded-lg text-sm mt-5" type="button"
-        (click)="logOut()">Log Out</button>
+    <div class="bg-bgbody text-white font-thin" style="height: calc(100% - 80px);">
+        <sman-accordion-item>
+            <i accordion-symbol class="fa-solid fa-table-columns"></i>
+            <p accordion-title>Dashboard</p>
+        </sman-accordion-item>
+        <sman-accordion-item>
+            <i accordion-symbol class="fa-solid fa-user-graduate"></i>
+            <p accordion-title>Students</p>
+            <accordion-button title="All Students" (select)="navToMenu('students', {page: 1}, true)" />
+            <accordion-button title="Add Students" (select)="navToMenu('students', {addStudent: true})" />
+        </sman-accordion-item>
+        <sman-accordion-item>
+            <i accordion-symbol class="fa-solid fa-person-breastfeeding"></i>
+            <p accordion-title>Parents</p>
+        </sman-accordion-item>
+        <sman-accordion-item>
+            <i accordion-symbol class="fa-solid fa-chalkboard-user"></i>
+            <p accordion-title>Teachers</p>
+        </sman-accordion-item>
+        <button class="w-full py-[10px] px-8 bg-primary-300 text-white rounded-lg text-sm mt-5" type="button"
+            (click)="logOut()">Log Out</button>
+    </div>
 </div>
