complete layout and basics of students, parents

--- a/src/app/parents/parents-page.component.html
+++ b/src/app/parents/parents-page.component.html
@@ -1,3 +1,14 @@
-<div class="container">
-    <p class="bg-gray-400 w-full">parents works!</p>
+<div class="bg-background p-4 pt-7 h-screen">
+    @if (displayAddParent) {
+    <sman-add-parent (cancel)="hideAddParentForm()" />
+    }
+    <div class="container bg-white p-4 mt-4 rounded-lg h-[calc(88vh)] flex flex-col justify-between">
+        <div class="overflow-x-auto">
+            <h1 class="text-center text-xl font-semibold">All Parents</h1>
+            <sman-parent-filter [queryParams]="filterParams"></sman-parent-filter>
+            <sman-item-table listOf="parent" [items]="parents"></sman-item-table>
+        </div>
+        <sman-pagination [pageSize]="itemPerPage" [totalCount]="parentsCount" [currentPage]="currentPage"
+            (pageChange)="handlePageChange($event)" />
+    </div>
 </div>
