--- a/src/app/shared/components/sidebar/accordion-item/accordion-item.component.html
+++ b/src/app/shared/components/sidebar/accordion-item/accordion-item.component.html
@@ -3,7 +3,7 @@
         <ng-content select="[accordion-symbol]" />
     </div>
     <div [ngClass]="{'font-normal': isShow}">
-        <ng-content select="[accordion-title]" />
+        {{title | titlecase}}
     </div>
     @if (isAccordion) {
     <div class="ml-auto">
