--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,23 +4,25 @@
         <i class="fa-solid fa-bars cursor-pointer text-white text-xl"></i>
     </div>
     <div class="bg-bgbody text-white font-thin" style="height: calc(100% - 80px);">
-        <sman-accordion-item>
+        <sman-accordion-item [navToMenu]="navToMenu" title="dashboard" [isShow]="selectedMenu===''" (selectMenu)="onSelectMenu('')">
             <i accordion-symbol class="fa-solid fa-table-columns"></i>
-            <p accordion-title>Dashboard</p>
         </sman-accordion-item>
-        <sman-accordion-item>
+        <sman-accordion-item title="students" [isShow]="selectedMenu==='students'"
+            (selectMenu)="onSelectMenu('students')">
             <i accordion-symbol class="fa-solid fa-user-graduate"></i>
-            <p accordion-title>Students</p>
             <accordion-button title="All Students" (select)="navToMenu('students', {page: 1}, true)" />
-            <accordion-button title="Add Students" (select)="navToMenu('students', {addStudent: true})" />
+            <accordion-button title="Add Student" (select)="navToMenu('students', {addStudent: true})" />
         </sman-accordion-item>
-        <sman-accordion-item>
+        <sman-accordion-item title="parents" [isShow]="selectedMenu==='parents'" (selectMenu)="onSelectMenu('parents')">
             <i accordion-symbol class="fa-solid fa-person-breastfeeding"></i>
-            <p accordion-title>Parents</p>
+            <accordion-button title="All Parents" (select)="navToMenu('parents', {page: 1}, true)" />
+            <accordion-button title="Add Parent" (select)="navToMenu('parents', {addParent: true})" />
         </sman-accordion-item>
-        <sman-accordion-item>
+        <sman-accordion-item title="teachers" [isShow]="selectedMenu==='teachers'"
+            (selectMenu)="onSelectMenu('teachers')">
             <i accordion-symbol class="fa-solid fa-chalkboard-user"></i>
-            <p accordion-title>Teachers</p>
+            <accordion-button title="All Teachers" (select)="navToMenu('teachers', {page: 1}, true)" />
+            <accordion-button title="Add Teacher" (select)="navToMenu('teachers', {addTeacher: true})" />
         </sman-accordion-item>
         <button class="w-full py-[10px] px-8 bg-primary-300 text-white rounded-lg text-sm mt-5" type="button"
             (click)="logOut()">Log Out</button>
