--- a/src/app/teachers/parent-profile/parent-profile.component.html
+++ b/src/app/teachers/parent-profile/parent-profile.component.html
@@ -1,15 +1,14 @@
-@if(student) {
+@if(parent) {
 <div class="flex gap-7">
     <div class="w-1/3">
         <img class="w-full h-full rounded-full border border-black" src="" alt="">
     </div>
     <div class="w-full">
-        <div class="text-lg text-blue-800 font-semibold">{{student.firstName + " " + student.lastName}}</div>
-        <div>{{student.email}}</div>
-        <div>{{student.phone}}</div>
-        <div>{{student.gender}}</div>
-        <div>{{student.id}}</div>
-        <div>{{student.classIds}}</div>
+        <div class="text-lg text-blue-800 font-semibold">{{parent.firstName + " " + parent.lastName}}</div>
+        <div>{{parent.email}}</div>
+        <div>{{parent.phone}}</div>
+        <div>{{parent.address}}</div>
+        <div>{{parent.id}}</div>
         <div class="flex gap-2">
             <button class="py-[10px] w-24 text-white bg-primary-300 rounded-lg text-sm">
                 Edit
@@ -23,6 +22,7 @@
         </div>
     </div>
 </div>
+<sman-item-table listOf="student" [items]="students"></sman-item-table>
 } @else {
-<div>This student does not exist!</div>
+<div>This parent does not exist!</div>
 }
