complete student, teacher, parent pages

--- a/src/app/teachers/teacher-filter/teacher-filter.component.html
+++ b/src/app/teachers/teacher-filter/teacher-filter.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="filterParentForm" (ngSubmit)="filterParents()"
+<form [formGroup]="filterTeacherForm" (ngSubmit)="filterTeachers()"
     class="container h-20 pb-5 bg-white shadow-md flex justify-between gap-2">
     <div class="flex items-center w-2/6">
         <input class="placeholder:text-sm w-full px-4 py-2 rounded-lg border" type="text" placeholder="Search by name"
