photo-uploader component

--- a/src/app/shared/components/loading-spinner/loading-spinner.component.html
+++ b/src/app/shared/components/loading-spinner/loading-spinner.component.html
@@ -1,3 +1,5 @@
 @if (isLoading$ | async) {
-    <!-- <p>LOADING!</p> -->
+        <div class="absolute top-0 left-0 bottom-0 right-0 flex items-center justify-center bg-white z-20">
+            <mat-spinner class="scale-50"></mat-spinner>
+        </div>
 }
