--- a/src/app/students/student-page/students-page.component.html
+++ b/src/app/students/student-page/students-page.component.html
@@ -1,6 +1,6 @@
 <div class="bg-background p-4 pt-7 h-screen">
     @if (displayAddStudent) {
-    <sman-add-student (cancel)="hideAddStudentForm()" />
+    <sman-add-student (cancelForm)="hideAddStudentForm()" />
     }
     <div class="container bg-white p-4 mt-4 rounded-lg h-[calc(88vh)] flex flex-col justify-between">
         <div class="overflow-x-auto">
