--- a/src/app/shared/components/add-form/add-form.component.html
+++ b/src/app/shared/components/add-form/add-form.component.html
@@ -1,7 +1,7 @@
 <div class="bg-black bg-opacity-20 px-4 w-full h-screen fixed top-0 left-0 z-20">
     <div class="container bg-white w-full top-10 relative rounded-2xl px-8 py-8 z-20">
-        <h1 class="font-medium text-xl mb-5">Add New Students</h1>
-        <form class="flex flex-col gap-2" [formGroup]="addParentForm" (ngSubmit)="addParent($event)">
+        <h1 class="font-medium text-xl mb-5">Add New {{addNew | titlecase}}</h1>
+        <form class="flex flex-col gap-2" [formGroup]="addForm" (ngSubmit)="onAddNew($event)">
             <div class="flex gap-4">
                 <!-- First Name -->
                 <div class="">
@@ -35,6 +35,27 @@
                         }
                     </div>
                 </div>
+                <!-- Gender -->
+                <div class="flex flex-col items-end">
+                    <div class="flex flex-col">
+                        <label for="gender">Gender:</label>
+                        <select class="px-2 py-3 border rounded-md max-w-32"
+                            [ngClass]="{'border-red-600': formService.isFieldInvalid(gender)}" name="gender" id="gender"
+                            formControlName="gender">
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                        </select>
+                    </div>
+                    <div class="text-red-600 text-sm">
+                        @if(formService.isFieldInvalid(gender)){
+                        @if(gender.hasError('required')) {
+                        Please select gender.
+                        }
+                        }
+
+                    </div>
+                </div>
+
             </div>
             <div class="flex gap-4">
                 <!-- Address -->
@@ -47,6 +68,20 @@
                         @if(formService.isFieldInvalid(address)){
                         @if(address.hasError('required')) {
                         Please enter your address.
+                        }
+                        }
+                    </div>
+                </div>
+                <!-- Date of Birth -->
+                <div class="w-1/6">
+                    <label for="dateOfBirth">Date of Birth:</label>
+                    <input class="border w-full rounded-md py-3 px-2 text-sm"
+                        [ngClass]="{'border-red-600': formService.isFieldInvalid(dateOfBirth)}" type="date"
+                        name="dateOfBirth" id="dateOfBirth" formControlName="dateOfBirth">
+                    <div class="text-red-600 text-sm">
+                        @if(formService.isFieldInvalid(dateOfBirth)){
+                        @if(dateOfBirth.hasError('required')) {
+                        Please enter your date of birth.
                         }
                         }
                     </div>
@@ -81,6 +116,20 @@
                         }
                     </div>
                 </div>
+                <!-- Admission Date -->
+                <div class="">
+                    <label for="admissionDate">Admission Date:</label>
+                    <input class="border w-full rounded-md py-3 px-2 text-sm"
+                        [ngClass]="{'border-red-600': formService.isFieldInvalid(admissionDate)}" type="date"
+                        name="admissionDate" id="admissionDate" formControlName="admissionDate">
+                    <div class="text-red-600 text-sm">
+                        @if(formService.isFieldInvalid(admissionDate)){
+                        @if(admissionDate.hasError('required')) {
+                        Please enter admission date.
+                        }
+                        }
+                    </div>
+                </div>
             </div>
             <div>
                 <sman-photo-uploader (photoUploaded)="choosePhoto($event)"></sman-photo-uploader>
@@ -89,9 +138,9 @@
             <div class="mt-3">
                 <button type="submit"
                     class="mr-5 py-[10px] px-8 bg-primary-300 text-white rounded-lg text-sm select-none">Add
-                    Student</button>
+                </button>
                 <button type="button" class="py-[10px] px-8 bg-primary-300 text-white rounded-lg text-sm select-none"
-                    (click)="cancelAddParent()">Cancel</button>
+                    (click)="cancelForm()">Cancel</button>
             </div>
 
         </form>
