--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container px-4 h-20 bg-white relative shadow-md flex justify-between">
+<div class="container px-4 h-20 bg-white relative shadow-md z-30 flex justify-between">
     <div class="relative flex w-3/5">
         <i class="fa-solid fa-magnifying-glass absolute top-1/2 -translate-y-1/2 ml-4 opacity-40"></i>
         <input class="placeholder:text-sm pl-11 w-full rounded-full focus:outline-none" type="text" placeholder="Search">
