--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -2,8 +2,9 @@
     <div>
         <sman-sidebar></sman-sidebar>
     </div>
-    <div class="w-full">
+    <div class="w-full relative">
         <sman-header></sman-header>
+        <sman-loading-spinner></sman-loading-spinner>
         <router-outlet></router-outlet>
     </div>
 </div>
