--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -24,6 +24,12 @@
             <accordion-button title="All Teachers" (select)="navToMenu('teachers', {page: 1}, true)" />
             <accordion-button title="Add Teacher" (select)="navToMenu('teachers', {addTeacher: true})" />
         </sman-accordion-item>
+        <sman-accordion-item title="subjects" [isShow]="selectedMenu==='subjects'"
+            (selectMenu)="onSelectMenu('subjects')">
+            <i accordion-symbol class="fa-solid fa-book"></i>
+            <accordion-button title="All Subjects" (select)="navToMenu('subjects', {page: 1}, true)" />
+            <accordion-button title="Add Subject" (select)="navToMenu('subjects', {addSubject: true})" />
+        </sman-accordion-item>
         <button class="w-full py-[10px] px-8 bg-primary-300 text-white rounded-lg text-sm mt-5" type="button"
             (click)="logOut()">Log Out</button>
     </div>
