--- a/src/app/shared/components/photouploader/photo-uploader.component.html
+++ b/src/app/shared/components/photouploader/photo-uploader.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full h-24 border-2 rounded-xl border-dashed border-gray-300 flex items-center justify-center"
+  class="w-full h-24 border rounded-xl border-dashed border-gray-300 flex items-center justify-center"
   [ngClass]="{
     'cursor-grabbing': isDragOver(),
     'cursor-pointer': !isDragOver(),
